@@ -1,3 +1,7 @@
+2008-01-02  Eric S. Raymond  <esr@snark.thyrsus.com>
+
+	* vc-svn.el (vc-svn-modify-change comment): New function.
+
 2008-01-01  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* vc-git.el (vc-git-dir-state): Set the vc-backend property.  Do
